--- a/Documentation/latex/class_main_menu_script.tex
+++ b/Documentation/latex/class_main_menu_script.tex
@@ -9,10 +9,18 @@ Inheritance diagram for Main\+Menu\+Script\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_main_menu_script_a3fc42b3b6cd46f348473de79943fd50c}\label{class_main_menu_script_a3fc42b3b6cd46f348473de79943fd50c}} 
-void {\bfseries On\+Exit} ()
+void \mbox{\hyperlink{class_main_menu_script_a3fc42b3b6cd46f348473de79943fd50c}{On\+Exit}} ()
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_main_menu_script_a3fc42b3b6cd46f348473de79943fd50c}\label{class_main_menu_script_a3fc42b3b6cd46f348473de79943fd50c}} 
+\index{MainMenuScript@{MainMenuScript}!OnExit@{OnExit}}
+\index{OnExit@{OnExit}!MainMenuScript@{MainMenuScript}}
+\doxysubsubsection{\texorpdfstring{OnExit()}{OnExit()}}
+{\footnotesize\ttfamily void Main\+Menu\+Script.\+On\+Exit (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Exits the Application -\/ called from the Main\+Menu-\/\+Button \char`\"{}\+Exit\char`\"{} 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
