--- a/Documentation/latex/class_atom_cycle_1_1_atom.tex
+++ b/Documentation/latex/class_atom_cycle_1_1_atom.tex
@@ -12,29 +12,21 @@ Inheritance diagram for Atom\+Cycle.\+Atom\+:\begin{figure}[H]
 \mbox{\Hypertarget{class_atom_cycle_1_1_atom_ad99866b8c692abc0b93afb33e0c05162}\label{class_atom_cycle_1_1_atom_ad99866b8c692abc0b93afb33e0c05162}} 
 void {\bfseries Start} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_acd432905382ed383cf5b9622b24647fc}\label{class_atom_cycle_1_1_atom_acd432905382ed383cf5b9622b24647fc}} 
-void {\bfseries create\+Atom} (Vector3 center)
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_acd432905382ed383cf5b9622b24647fc}{create\+Atom}} (Vector3 center)
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_af63418434e63d4e41081e4d353324980}\label{class_atom_cycle_1_1_atom_af63418434e63d4e41081e4d353324980}} 
-IEnumerator {\bfseries freeze\+Pos} ()
+IEnumerator \mbox{\hyperlink{class_atom_cycle_1_1_atom_af63418434e63d4e41081e4d353324980}{freeze\+Pos}} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_a650200a16cc7e4984b587dde8d50f2aa}\label{class_atom_cycle_1_1_atom_a650200a16cc7e4984b587dde8d50f2aa}} 
-void {\bfseries Update} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_a650200a16cc7e4984b587dde8d50f2aa}{Update}} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_a3539af331b18e4645ba9ece6de029b43}\label{class_atom_cycle_1_1_atom_a3539af331b18e4645ba9ece6de029b43}} 
-void {\bfseries draw\+Circle} (float radius, Line\+Renderer lr)
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_a3539af331b18e4645ba9ece6de029b43}{draw\+Circle}} (float radius, Line\+Renderer lr)
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_adfecda59f825d0269131d3435617dad7}\label{class_atom_cycle_1_1_atom_adfecda59f825d0269131d3435617dad7}} 
-Game\+Object {\bfseries generate\+Proton} (Vector3 pos)
+Game\+Object \mbox{\hyperlink{class_atom_cycle_1_1_atom_adfecda59f825d0269131d3435617dad7}{generate\+Proton}} (Vector3 pos)
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_a8c8478abebb9af7b5b739775de064dd9}\label{class_atom_cycle_1_1_atom_a8c8478abebb9af7b5b739775de064dd9}} 
-Game\+Object {\bfseries generate\+Neutron} (Vector3 pos)
+Game\+Object \mbox{\hyperlink{class_atom_cycle_1_1_atom_a8c8478abebb9af7b5b739775de064dd9}{generate\+Neutron}} (Vector3 pos)
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_ab0042ebfe9162ae0274ff8046dd2fec3}\label{class_atom_cycle_1_1_atom_ab0042ebfe9162ae0274ff8046dd2fec3}} 
-Game\+Object\mbox{[}$\,$\mbox{]} {\bfseries generate\+Electron\+Shells} ()
+Game\+Object\mbox{[}$\,$\mbox{]} \mbox{\hyperlink{class_atom_cycle_1_1_atom_ab0042ebfe9162ae0274ff8046dd2fec3}{generate\+Electron\+Shells}} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_a2c2b3dc9d7b3566b78b0494f6d6e9379}\label{class_atom_cycle_1_1_atom_a2c2b3dc9d7b3566b78b0494f6d6e9379}} 
-void {\bfseries generate\+Electron} (Vector3 pos, float r, int shell, Game\+Object shell\+GO)
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_a2c2b3dc9d7b3566b78b0494f6d6e9379}{generate\+Electron}} (Vector3 pos, float r, int shell, Game\+Object shell\+GO)
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
@@ -90,8 +82,7 @@ bool {\bfseries freeze\+Nucleus} = false
 \doxysubsection*{Private Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_a72ce28c293a03ccc2fa3a8aa66abd181}\label{class_atom_cycle_1_1_atom_a72ce28c293a03ccc2fa3a8aa66abd181}} 
-string {\bfseries create\+Nucleons} (int n\+Points, float scale, int protons\+To\+Be\+Created, int neutrons\+To\+Be\+Created)
+string \mbox{\hyperlink{class_atom_cycle_1_1_atom_a72ce28c293a03ccc2fa3a8aa66abd181}{create\+Nucleons}} (int n\+Points, float scale, int protons\+To\+Be\+Created, int neutrons\+To\+Be\+Created)
 \end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
@@ -103,6 +94,68 @@ Vector3 {\bfseries center}
 Transform {\bfseries nucleus}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_atom_cycle_1_1_atom_acd432905382ed383cf5b9622b24647fc}\label{class_atom_cycle_1_1_atom_acd432905382ed383cf5b9622b24647fc}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!createAtom@{createAtom}}
+\index{createAtom@{createAtom}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{createAtom()}{createAtom()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom.\+create\+Atom (\begin{DoxyParamCaption}\item[{Vector3}]{center }\end{DoxyParamCaption})}
+
+Create each individual atom component \mbox{\Hypertarget{class_atom_cycle_1_1_atom_a72ce28c293a03ccc2fa3a8aa66abd181}\label{class_atom_cycle_1_1_atom_a72ce28c293a03ccc2fa3a8aa66abd181}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!createNucleons@{createNucleons}}
+\index{createNucleons@{createNucleons}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{createNucleons()}{createNucleons()}}
+{\footnotesize\ttfamily string Atom\+Cycle.\+Atom.\+create\+Nucleons (\begin{DoxyParamCaption}\item[{int}]{n\+Points,  }\item[{float}]{scale,  }\item[{int}]{protons\+To\+Be\+Created,  }\item[{int}]{neutrons\+To\+Be\+Created }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
+
+Create given number of proton and nuetron objects ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_a3539af331b18e4645ba9ece6de029b43}\label{class_atom_cycle_1_1_atom_a3539af331b18e4645ba9ece6de029b43}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!drawCircle@{drawCircle}}
+\index{drawCircle@{drawCircle}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{drawCircle()}{drawCircle()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom.\+draw\+Circle (\begin{DoxyParamCaption}\item[{float}]{radius,  }\item[{Line\+Renderer}]{lr }\end{DoxyParamCaption})}
+
+Draw \mbox{\hyperlink{class_atom_cycle_1_1_electron}{Electron}} Shells \mbox{\Hypertarget{class_atom_cycle_1_1_atom_af63418434e63d4e41081e4d353324980}\label{class_atom_cycle_1_1_atom_af63418434e63d4e41081e4d353324980}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!freezePos@{freezePos}}
+\index{freezePos@{freezePos}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{freezePos()}{freezePos()}}
+{\footnotesize\ttfamily IEnumerator Atom\+Cycle.\+Atom.\+freeze\+Pos (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Freeze the physics of atom \mbox{\Hypertarget{class_atom_cycle_1_1_atom_a2c2b3dc9d7b3566b78b0494f6d6e9379}\label{class_atom_cycle_1_1_atom_a2c2b3dc9d7b3566b78b0494f6d6e9379}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!generateElectron@{generateElectron}}
+\index{generateElectron@{generateElectron}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{generateElectron()}{generateElectron()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom.\+generate\+Electron (\begin{DoxyParamCaption}\item[{Vector3}]{pos,  }\item[{float}]{r,  }\item[{int}]{shell,  }\item[{Game\+Object}]{shell\+GO }\end{DoxyParamCaption})}
+
+\mbox{\hyperlink{class_atom_cycle_1_1_electron}{Electron}} game\+Object generator ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_ab0042ebfe9162ae0274ff8046dd2fec3}\label{class_atom_cycle_1_1_atom_ab0042ebfe9162ae0274ff8046dd2fec3}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!generateElectronShells@{generateElectronShells}}
+\index{generateElectronShells@{generateElectronShells}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{generateElectronShells()}{generateElectronShells()}}
+{\footnotesize\ttfamily Game\+Object\mbox{[}$\,$\mbox{]} Atom\+Cycle.\+Atom.\+generate\+Electron\+Shells (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+\mbox{\hyperlink{class_atom_cycle_1_1_electron}{Electron}} Shell Generator ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_a8c8478abebb9af7b5b739775de064dd9}\label{class_atom_cycle_1_1_atom_a8c8478abebb9af7b5b739775de064dd9}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!generateNeutron@{generateNeutron}}
+\index{generateNeutron@{generateNeutron}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{generateNeutron()}{generateNeutron()}}
+{\footnotesize\ttfamily Game\+Object Atom\+Cycle.\+Atom.\+generate\+Neutron (\begin{DoxyParamCaption}\item[{Vector3}]{pos }\end{DoxyParamCaption})}
+
+Neutron game\+Object generator ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_adfecda59f825d0269131d3435617dad7}\label{class_atom_cycle_1_1_atom_adfecda59f825d0269131d3435617dad7}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!generateProton@{generateProton}}
+\index{generateProton@{generateProton}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{generateProton()}{generateProton()}}
+{\footnotesize\ttfamily Game\+Object Atom\+Cycle.\+Atom.\+generate\+Proton (\begin{DoxyParamCaption}\item[{Vector3}]{pos }\end{DoxyParamCaption})}
+
+Proton game\+Object generator ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_a650200a16cc7e4984b587dde8d50f2aa}\label{class_atom_cycle_1_1_atom_a650200a16cc7e4984b587dde8d50f2aa}} 
+\index{AtomCycle.Atom@{AtomCycle.Atom}!Update@{Update}}
+\index{Update@{Update}!AtomCycle.Atom@{AtomCycle.Atom}}
+\doxysubsubsection{\texorpdfstring{Update()}{Update()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom.\+Update (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Control spinning of electrons 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
