--- a/Documentation/latex/class_atom_cycle_1_1_atom_spawner.tex
+++ b/Documentation/latex/class_atom_cycle_1_1_atom_spawner.tex
@@ -37,6 +37,9 @@ List$<$ \mbox{\hyperlink{class_atom_cycle_1_1_atom}{Atom}} $>$ {\bfseries spawne
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Controls Game spawning of atoms 
+
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{class_atom_cycle_1_1_atom_spawner_a89051837f13b71996cbc4a7040dcb178}\label{class_atom_cycle_1_1_atom_spawner_a89051837f13b71996cbc4a7040dcb178}} 
 \index{AtomCycle.AtomSpawner@{AtomCycle.AtomSpawner}!createAtoms@{createAtoms}}
