--- a/Documentation/latex/class_atom_cycle_1_1_atom_u_i.tex
+++ b/Documentation/latex/class_atom_cycle_1_1_atom_u_i.tex
@@ -9,17 +9,13 @@ Inheritance diagram for Atom\+Cycle.\+Atom\+UI\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_abf07260b2f4aa8836fc59ed9af1e5e3e}\label{class_atom_cycle_1_1_atom_u_i_abf07260b2f4aa8836fc59ed9af1e5e3e}} 
-void {\bfseries Toggle\+Info} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_u_i_abf07260b2f4aa8836fc59ed9af1e5e3e}{Toggle\+Info}} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a1808ac597c380157cad4c7ffc88155b7}\label{class_atom_cycle_1_1_atom_u_i_a1808ac597c380157cad4c7ffc88155b7}} 
-void {\bfseries Atom\+Tracked} (\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} atom)
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_u_i_a1808ac597c380157cad4c7ffc88155b7}{Atom\+Tracked}} (\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} atom)
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a840a179908b58e9fe2243fd68369d3ad}\label{class_atom_cycle_1_1_atom_u_i_a840a179908b58e9fe2243fd68369d3ad}} 
-void {\bfseries No\+Atom\+Tracked} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_u_i_a840a179908b58e9fe2243fd68369d3ad}{No\+Atom\+Tracked}} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a91cf6e15213ca00418d43130e52a887a}\label{class_atom_cycle_1_1_atom_u_i_a91cf6e15213ca00418d43130e52a887a}} 
-void {\bfseries On\+Main\+Menu} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_u_i_a91cf6e15213ca00418d43130e52a887a}{On\+Main\+Menu}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
@@ -63,8 +59,7 @@ Image {\bfseries atom\+Color}
 \doxysubsection*{Private Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a2690c2dcb9a6d10b2d515cb36ec198f6}\label{class_atom_cycle_1_1_atom_u_i_a2690c2dcb9a6d10b2d515cb36ec198f6}} 
-void {\bfseries Start} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_atom_u_i_a2690c2dcb9a6d10b2d515cb36ec198f6}{Start}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
@@ -73,6 +68,46 @@ void {\bfseries Start} ()
 \mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} {\bfseries tracked\+Atom}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Class Controls UI elements for \mbox{\hyperlink{class_atom_cycle_1_1_atom}{Atom}} Scene 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a1808ac597c380157cad4c7ffc88155b7}\label{class_atom_cycle_1_1_atom_u_i_a1808ac597c380157cad4c7ffc88155b7}} 
+\index{AtomCycle.AtomUI@{AtomCycle.AtomUI}!AtomTracked@{AtomTracked}}
+\index{AtomTracked@{AtomTracked}!AtomCycle.AtomUI@{AtomCycle.AtomUI}}
+\doxysubsubsection{\texorpdfstring{AtomTracked()}{AtomTracked()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom\+UI.\+Atom\+Tracked (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}}}]{atom }\end{DoxyParamCaption})}
+
+Extract \mbox{\hyperlink{class_atom_cycle_1_1_atom}{Atom}} info from Atom\+So and update \mbox{\hyperlink{class_atom_cycle_1_1_atom}{Atom}} info Canvas ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a840a179908b58e9fe2243fd68369d3ad}\label{class_atom_cycle_1_1_atom_u_i_a840a179908b58e9fe2243fd68369d3ad}} 
+\index{AtomCycle.AtomUI@{AtomCycle.AtomUI}!NoAtomTracked@{NoAtomTracked}}
+\index{NoAtomTracked@{NoAtomTracked}!AtomCycle.AtomUI@{AtomCycle.AtomUI}}
+\doxysubsubsection{\texorpdfstring{NoAtomTracked()}{NoAtomTracked()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom\+UI.\+No\+Atom\+Tracked (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Disable atom Info ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a91cf6e15213ca00418d43130e52a887a}\label{class_atom_cycle_1_1_atom_u_i_a91cf6e15213ca00418d43130e52a887a}} 
+\index{AtomCycle.AtomUI@{AtomCycle.AtomUI}!OnMainMenu@{OnMainMenu}}
+\index{OnMainMenu@{OnMainMenu}!AtomCycle.AtomUI@{AtomCycle.AtomUI}}
+\doxysubsubsection{\texorpdfstring{OnMainMenu()}{OnMainMenu()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom\+UI.\+On\+Main\+Menu (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Load Main Menu ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_a2690c2dcb9a6d10b2d515cb36ec198f6}\label{class_atom_cycle_1_1_atom_u_i_a2690c2dcb9a6d10b2d515cb36ec198f6}} 
+\index{AtomCycle.AtomUI@{AtomCycle.AtomUI}!Start@{Start}}
+\index{Start@{Start}!AtomCycle.AtomUI@{AtomCycle.AtomUI}}
+\doxysubsubsection{\texorpdfstring{Start()}{Start()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom\+UI.\+Start (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
+
+Start is called before the first frame update \mbox{\Hypertarget{class_atom_cycle_1_1_atom_u_i_abf07260b2f4aa8836fc59ed9af1e5e3e}\label{class_atom_cycle_1_1_atom_u_i_abf07260b2f4aa8836fc59ed9af1e5e3e}} 
+\index{AtomCycle.AtomUI@{AtomCycle.AtomUI}!ToggleInfo@{ToggleInfo}}
+\index{ToggleInfo@{ToggleInfo}!AtomCycle.AtomUI@{AtomCycle.AtomUI}}
+\doxysubsubsection{\texorpdfstring{ToggleInfo()}{ToggleInfo()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Atom\+UI.\+Toggle\+Info (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Toggle \mbox{\hyperlink{class_atom_cycle_1_1_atom}{Atom}} Info screen visibility ~\newline
+ 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
