--- a/Documentation/latex/class_atom_cycle_1_1_electron.tex
+++ b/Documentation/latex/class_atom_cycle_1_1_electron.tex
@@ -9,11 +9,9 @@ Inheritance diagram for Atom\+Cycle.\+Electron\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_electron_ade36f96291a0058b56d338f1e02d6509}\label{class_atom_cycle_1_1_electron_ade36f96291a0058b56d338f1e02d6509}} 
-void {\bfseries Start} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_electron_ade36f96291a0058b56d338f1e02d6509}{Start}} ()
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_electron_ae88613b6af25504e97e1ad7fe9fad392}\label{class_atom_cycle_1_1_electron_ae88613b6af25504e97e1ad7fe9fad392}} 
-void {\bfseries Update} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_electron_ae88613b6af25504e97e1ad7fe9fad392}{Update}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
@@ -34,6 +32,26 @@ float {\bfseries radius\+Speed} = 0.\+5f
 float {\bfseries rotation\+Speed} = 40.\+0f
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Elecron Class Component 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_atom_cycle_1_1_electron_ade36f96291a0058b56d338f1e02d6509}\label{class_atom_cycle_1_1_electron_ade36f96291a0058b56d338f1e02d6509}} 
+\index{AtomCycle.Electron@{AtomCycle.Electron}!Start@{Start}}
+\index{Start@{Start}!AtomCycle.Electron@{AtomCycle.Electron}}
+\doxysubsubsection{\texorpdfstring{Start()}{Start()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Electron.\+Start (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+set Initial Spawn Position ~\newline
+ \mbox{\Hypertarget{class_atom_cycle_1_1_electron_ae88613b6af25504e97e1ad7fe9fad392}\label{class_atom_cycle_1_1_electron_ae88613b6af25504e97e1ad7fe9fad392}} 
+\index{AtomCycle.Electron@{AtomCycle.Electron}!Update@{Update}}
+\index{Update@{Update}!AtomCycle.Electron@{AtomCycle.Electron}}
+\doxysubsubsection{\texorpdfstring{Update()}{Update()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Electron.\+Update (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+rotate around center position ~\newline
+ 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
