--- a/Documentation/latex/class_atom_cycle_1_1_nucleon.tex
+++ b/Documentation/latex/class_atom_cycle_1_1_nucleon.tex
@@ -9,8 +9,7 @@ Inheritance diagram for Atom\+Cycle.\+Nucleon\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_nucleon_ad5b690863820a86401f92d839d468828}\label{class_atom_cycle_1_1_nucleon_ad5b690863820a86401f92d839d468828}} 
-void {\bfseries Freeze} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_nucleon_ad5b690863820a86401f92d839d468828}{Freeze}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
@@ -21,8 +20,7 @@ Vector3 {\bfseries center}
 \doxysubsection*{Private Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_atom_cycle_1_1_nucleon_afe8575ac6cf3e1c17bb9189597a642f5}\label{class_atom_cycle_1_1_nucleon_afe8575ac6cf3e1c17bb9189597a642f5}} 
-void {\bfseries Update} ()
+void \mbox{\hyperlink{class_atom_cycle_1_1_nucleon_afe8575ac6cf3e1c17bb9189597a642f5}{Update}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
@@ -34,6 +32,26 @@ bool {\bfseries stop} = false
 Transform {\bfseries spawn}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+\mbox{\hyperlink{class_atom_cycle_1_1_nucleon}{Nucleon}} Class Component ~\newline
+ 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_atom_cycle_1_1_nucleon_ad5b690863820a86401f92d839d468828}\label{class_atom_cycle_1_1_nucleon_ad5b690863820a86401f92d839d468828}} 
+\index{AtomCycle.Nucleon@{AtomCycle.Nucleon}!Freeze@{Freeze}}
+\index{Freeze@{Freeze}!AtomCycle.Nucleon@{AtomCycle.Nucleon}}
+\doxysubsubsection{\texorpdfstring{Freeze()}{Freeze()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Nucleon.\+Freeze (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Turns off all rigidbodys and colliders \mbox{\Hypertarget{class_atom_cycle_1_1_nucleon_afe8575ac6cf3e1c17bb9189597a642f5}\label{class_atom_cycle_1_1_nucleon_afe8575ac6cf3e1c17bb9189597a642f5}} 
+\index{AtomCycle.Nucleon@{AtomCycle.Nucleon}!Update@{Update}}
+\index{Update@{Update}!AtomCycle.Nucleon@{AtomCycle.Nucleon}}
+\doxysubsubsection{\texorpdfstring{Update()}{Update()}}
+{\footnotesize\ttfamily void Atom\+Cycle.\+Nucleon.\+Update (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
+
+Controls Physics on Nuecleon object ~\newline
+ 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
