--- a/Documentation/latex/class_atom_s_o.tex
+++ b/Documentation/latex/class_atom_s_o.tex
@@ -32,6 +32,9 @@ Color32 {\bfseries atom\+Color}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Scriptable object containing relevant information for Atom Objects 
+
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
 Krypton/\+Assets/\+Scripts/\+SO/Atom\+SO.\+cs\end{DoxyCompactItemize}
