--- a/Documentation/latex/class_image_target.tex
+++ b/Documentation/latex/class_image_target.tex
@@ -14,6 +14,9 @@ Inheritance diagram for Image\+Target\+:\begin{figure}[H]
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Contains the Atom Data for the Imagetarget 
+
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
 Krypton/\+Assets/\+Scripts/\+Utility/Image\+Target.\+cs\end{DoxyCompactItemize}
