--- a/Documentation/latex/class_look_at_camera.tex
+++ b/Documentation/latex/class_look_at_camera.tex
@@ -23,6 +23,9 @@ Transform {\bfseries target}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Looks at Camera 
+
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
 Krypton/\+Assets/\+Scripts/\+Utility/Look\+At\+Camera.\+cs\end{DoxyCompactItemize}
