--- a/Documentation/latex/class_task_mode_1_1_task.tex
+++ b/Documentation/latex/class_task_mode_1_1_task.tex
@@ -29,6 +29,9 @@ string {\bfseries Name}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Describes a \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} 
+
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
 Krypton/\+Assets/\+Scripts/\+Task/Task.\+cs\end{DoxyCompactItemize}
