--- a/Documentation/latex/class_task_mode_1_1_task_help_u_i.tex
+++ b/Documentation/latex/class_task_mode_1_1_task_help_u_i.tex
@@ -23,6 +23,9 @@ TMP\+\_\+\+Text {\bfseries Text}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Handles the \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} -\/ Help -\/ Popup window 
+
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
 Krypton/\+Assets/\+Scripts/\+Task/Task\+Help\+UI.\+cs\end{DoxyCompactItemize}
