--- a/Documentation/latex/class_task_mode_1_1_task_list.tex
+++ b/Documentation/latex/class_task_mode_1_1_task_list.tex
@@ -54,9 +54,23 @@ bool {\bfseries Done}\hspace{0.3cm}{\ttfamily  \mbox{[}get\mbox{]}}
 \mbox{\Hypertarget{class_task_mode_1_1_task_list_af903ab7fe761be0c23f1a51f939396d6}\label{class_task_mode_1_1_task_list_af903ab7fe761be0c23f1a51f939396d6}} 
 IEnumerator IEnumerable. {\bfseries Get\+Enumerator} ()
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_a3bfa59fc481829282fec8060838e20dc}\label{class_task_mode_1_1_task_list_a3bfa59fc481829282fec8060838e20dc}} 
-int {\bfseries get\+Count\+Done} ()
+int \mbox{\hyperlink{class_task_mode_1_1_task_list_a3bfa59fc481829282fec8060838e20dc}{get\+Count\+Done}} ()
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Holds one List of Tasks 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_task_mode_1_1_task_list_a3bfa59fc481829282fec8060838e20dc}\label{class_task_mode_1_1_task_list_a3bfa59fc481829282fec8060838e20dc}} 
+\index{TaskMode.TaskList@{TaskMode.TaskList}!getCountDone@{getCountDone}}
+\index{getCountDone@{getCountDone}!TaskMode.TaskList@{TaskMode.TaskList}}
+\doxysubsubsection{\texorpdfstring{getCountDone()}{getCountDone()}}
+{\footnotesize\ttfamily int Task\+Mode.\+Task\+List.\+get\+Count\+Done (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
+
+\begin{DoxyReturn}{Returns}
+the count of Tasks that are done 
+\end{DoxyReturn}
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
