--- a/Documentation/latex/class_task_mode_1_1_task_list_task.tex
+++ b/Documentation/latex/class_task_mode_1_1_task_list_task.tex
@@ -12,8 +12,7 @@ Inheritance diagram for Task\+Mode.\+Task\+List\+Task\+:\begin{figure}[H]
 \mbox{\Hypertarget{class_task_mode_1_1_task_list_task_ad33f8a515e4bd311edc2891aff0aebfa}\label{class_task_mode_1_1_task_list_task_ad33f8a515e4bd311edc2891aff0aebfa}} 
 void {\bfseries Initialize} (\mbox{\hyperlink{class_task_mode_1_1_task}{Task}} task)
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_task_aeaf90a1e9f3626cef3a70ba715abd3dc}\label{class_task_mode_1_1_task_list_task_aeaf90a1e9f3626cef3a70ba715abd3dc}} 
-void {\bfseries On\+Click} ()
+void \mbox{\hyperlink{class_task_mode_1_1_task_list_task_aeaf90a1e9f3626cef3a70ba715abd3dc}{On\+Click}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
@@ -28,6 +27,18 @@ TMP\+\_\+\+Text {\bfseries Text}
 \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} {\bfseries Task}
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+\mbox{\hyperlink{class_task_mode_1_1_task}{Task}} Entry in the Tasklist -\/ UI 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_task_mode_1_1_task_list_task_aeaf90a1e9f3626cef3a70ba715abd3dc}\label{class_task_mode_1_1_task_list_task_aeaf90a1e9f3626cef3a70ba715abd3dc}} 
+\index{TaskMode.TaskListTask@{TaskMode.TaskListTask}!OnClick@{OnClick}}
+\index{OnClick@{OnClick}!TaskMode.TaskListTask@{TaskMode.TaskListTask}}
+\doxysubsubsection{\texorpdfstring{OnClick()}{OnClick()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+List\+Task.\+On\+Click (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+Opens the Task\+Help for the \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
