--- a/Documentation/latex/class_task_mode_1_1_task_list_u_i.tex
+++ b/Documentation/latex/class_task_mode_1_1_task_list_u_i.tex
@@ -30,10 +30,21 @@ void {\bfseries On\+Destroy} ()
 \mbox{\Hypertarget{class_task_mode_1_1_task_list_u_i_a07bde8996d274d312a45dcd4964501db}\label{class_task_mode_1_1_task_list_u_i_a07bde8996d274d312a45dcd4964501db}} 
 void {\bfseries On\+Enable} ()
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_u_i_a926b0219a80c96d39467e0e03fef424d}\label{class_task_mode_1_1_task_list_u_i_a926b0219a80c96d39467e0e03fef424d}} 
-void {\bfseries Update\+List} (bool success=true)
+void \mbox{\hyperlink{class_task_mode_1_1_task_list_u_i_a926b0219a80c96d39467e0e03fef424d}{Update\+List}} (bool success=true)
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Handles the Tasklist -\/ Window 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_task_mode_1_1_task_list_u_i_a926b0219a80c96d39467e0e03fef424d}\label{class_task_mode_1_1_task_list_u_i_a926b0219a80c96d39467e0e03fef424d}} 
+\index{TaskMode.TaskListUI@{TaskMode.TaskListUI}!UpdateList@{UpdateList}}
+\index{UpdateList@{UpdateList}!TaskMode.TaskListUI@{TaskMode.TaskListUI}}
+\doxysubsubsection{\texorpdfstring{UpdateList()}{UpdateList()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+List\+UI.\+Update\+List (\begin{DoxyParamCaption}\item[{bool}]{success = {\ttfamily true} }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
+
+Writes the whole \mbox{\hyperlink{class_task_mode_1_1_task_list}{Task\+List}} from Task\+Mode\+Manager.\+Singleton.\+Tasks 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
