--- a/Documentation/latex/class_task_mode_1_1_task_menu.tex
+++ b/Documentation/latex/class_task_mode_1_1_task_menu.tex
@@ -46,10 +46,12 @@ TMP\+\_\+\+Dropdown {\bfseries Task\+List\+Selection\+Dropdown}
 \mbox{\Hypertarget{class_task_mode_1_1_task_menu_ab82b5c55c7aa61d78a3f38f7522d540f}\label{class_task_mode_1_1_task_menu_ab82b5c55c7aa61d78a3f38f7522d540f}} 
 void {\bfseries Start} ()
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_menu_ae371d154cc11f6dc476a72f35eb03cda}\label{class_task_mode_1_1_task_menu_ae371d154cc11f6dc476a72f35eb03cda}} 
-void {\bfseries Fill\+Task\+List\+Selection} ()
+void \mbox{\hyperlink{class_task_mode_1_1_task_menu_ae371d154cc11f6dc476a72f35eb03cda}{Fill\+Task\+List\+Selection}} ()
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Handles the Menu for the \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} Mode 
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{class_task_mode_1_1_task_menu_a1e8f6feab42883e2328a37ba63395c93}\label{class_task_mode_1_1_task_menu_a1e8f6feab42883e2328a37ba63395c93}} 
@@ -58,7 +60,13 @@ void {\bfseries Fill\+Task\+List\+Selection} ()
 \doxysubsubsection{\texorpdfstring{CloseTaskListSelection()}{CloseTaskListSelection()}}
 {\footnotesize\ttfamily void Task\+Mode.\+Task\+Menu.\+Close\+Task\+List\+Selection (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Closes the \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} Selection Dropdown \mbox{\Hypertarget{class_task_mode_1_1_task_menu_ae51f9bd8679945b863e9f73b4c60878e}\label{class_task_mode_1_1_task_menu_ae51f9bd8679945b863e9f73b4c60878e}} 
+Closes the \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} Selection Dropdown \mbox{\Hypertarget{class_task_mode_1_1_task_menu_ae371d154cc11f6dc476a72f35eb03cda}\label{class_task_mode_1_1_task_menu_ae371d154cc11f6dc476a72f35eb03cda}} 
+\index{TaskMode.TaskMenu@{TaskMode.TaskMenu}!FillTaskListSelection@{FillTaskListSelection}}
+\index{FillTaskListSelection@{FillTaskListSelection}!TaskMode.TaskMenu@{TaskMode.TaskMenu}}
+\doxysubsubsection{\texorpdfstring{FillTaskListSelection()}{FillTaskListSelection()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+Menu.\+Fill\+Task\+List\+Selection (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [private]}}
+
+Fills the dropdown of available \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} Lists \mbox{\Hypertarget{class_task_mode_1_1_task_menu_ae51f9bd8679945b863e9f73b4c60878e}\label{class_task_mode_1_1_task_menu_ae51f9bd8679945b863e9f73b4c60878e}} 
 \index{TaskMode.TaskMenu@{TaskMode.TaskMenu}!OnAtom@{OnAtom}}
 \index{OnAtom@{OnAtom}!TaskMode.TaskMenu@{TaskMode.TaskMenu}}
 \doxysubsubsection{\texorpdfstring{OnAtom()}{OnAtom()}}
