--- a/Documentation/latex/class_task_mode_1_1_task_list_creator.tex
+++ b/Documentation/latex/class_task_mode_1_1_task_list_creator.tex
@@ -9,20 +9,15 @@ Inheritance diagram for Task\+Mode.\+Task\+List\+Creator\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a94a5884bc986ad1e282122f2ce363d51}\label{class_task_mode_1_1_task_list_creator_a94a5884bc986ad1e282122f2ce363d51}} 
-void {\bfseries Add\+Create\+Atom} (\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} atom)
+void \mbox{\hyperlink{class_task_mode_1_1_task_list_creator_a94a5884bc986ad1e282122f2ce363d51}{Add\+Create\+Atom}} (\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} atom)
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a0e0c2ff10bddc3a2007facdf3402fee7}\label{class_task_mode_1_1_task_list_creator_a0e0c2ff10bddc3a2007facdf3402fee7}} 
-void {\bfseries Add\+View\+Atom} (\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} atom)
+void \mbox{\hyperlink{class_task_mode_1_1_task_list_creator_a0e0c2ff10bddc3a2007facdf3402fee7}{Add\+View\+Atom}} (\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}} atom)
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a8baf3ad709b5a2ac243f5b23100dc6db}\label{class_task_mode_1_1_task_list_creator_a8baf3ad709b5a2ac243f5b23100dc6db}} 
-void {\bfseries Add\+Create\+Molecule} (\mbox{\hyperlink{class_molecule_s_o}{Molecule\+SO}} molecule)
+void \mbox{\hyperlink{class_task_mode_1_1_task_list_creator_a8baf3ad709b5a2ac243f5b23100dc6db}{Add\+Create\+Molecule}} (\mbox{\hyperlink{class_molecule_s_o}{Molecule\+SO}} molecule)
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a2129b719b4c4f8cb38728de126b04c78}\label{class_task_mode_1_1_task_list_creator_a2129b719b4c4f8cb38728de126b04c78}} 
-void {\bfseries Add\+View\+Molecule} (\mbox{\hyperlink{class_molecule_s_o}{Molecule\+SO}} molecule)
+void \mbox{\hyperlink{class_task_mode_1_1_task_list_creator_a2129b719b4c4f8cb38728de126b04c78}{Add\+View\+Molecule}} (\mbox{\hyperlink{class_molecule_s_o}{Molecule\+SO}} molecule)
 \item 
-\mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a9bef0f4b5d8a84f8168d321d3a84c3b7}\label{class_task_mode_1_1_task_list_creator_a9bef0f4b5d8a84f8168d321d3a84c3b7}} 
-int {\bfseries Save} ()
+int \mbox{\hyperlink{class_task_mode_1_1_task_list_creator_a9bef0f4b5d8a84f8168d321d3a84c3b7}{Save}} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
@@ -42,6 +37,45 @@ int {\bfseries Save} ()
 \mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_abfb8daf15b47bc5a19f3f739850f2b7a}\label{class_task_mode_1_1_task_list_creator_abfb8daf15b47bc5a19f3f739850f2b7a}} 
 void {\bfseries Start} ()
 \end{DoxyCompactItemize}
+
+
+\doxysubsection{Detailed Description}
+Handles the \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} List Creation 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a94a5884bc986ad1e282122f2ce363d51}\label{class_task_mode_1_1_task_list_creator_a94a5884bc986ad1e282122f2ce363d51}} 
+\index{TaskMode.TaskListCreator@{TaskMode.TaskListCreator}!AddCreateAtom@{AddCreateAtom}}
+\index{AddCreateAtom@{AddCreateAtom}!TaskMode.TaskListCreator@{TaskMode.TaskListCreator}}
+\doxysubsubsection{\texorpdfstring{AddCreateAtom()}{AddCreateAtom()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+List\+Creator.\+Add\+Create\+Atom (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}}}]{atom }\end{DoxyParamCaption})}
+
+Adds a Create -\/ Atom -\/ \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} \mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a8baf3ad709b5a2ac243f5b23100dc6db}\label{class_task_mode_1_1_task_list_creator_a8baf3ad709b5a2ac243f5b23100dc6db}} 
+\index{TaskMode.TaskListCreator@{TaskMode.TaskListCreator}!AddCreateMolecule@{AddCreateMolecule}}
+\index{AddCreateMolecule@{AddCreateMolecule}!TaskMode.TaskListCreator@{TaskMode.TaskListCreator}}
+\doxysubsubsection{\texorpdfstring{AddCreateMolecule()}{AddCreateMolecule()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+List\+Creator.\+Add\+Create\+Molecule (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_molecule_s_o}{Molecule\+SO}}}]{molecule }\end{DoxyParamCaption})}
+
+Adds a Create -\/ \mbox{\hyperlink{namespace_molecule}{Molecule}} -\/ \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} \mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a0e0c2ff10bddc3a2007facdf3402fee7}\label{class_task_mode_1_1_task_list_creator_a0e0c2ff10bddc3a2007facdf3402fee7}} 
+\index{TaskMode.TaskListCreator@{TaskMode.TaskListCreator}!AddViewAtom@{AddViewAtom}}
+\index{AddViewAtom@{AddViewAtom}!TaskMode.TaskListCreator@{TaskMode.TaskListCreator}}
+\doxysubsubsection{\texorpdfstring{AddViewAtom()}{AddViewAtom()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+List\+Creator.\+Add\+View\+Atom (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_atom_s_o}{Atom\+SO}}}]{atom }\end{DoxyParamCaption})}
+
+Adds a View -\/ Atom -\/ \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} \mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a2129b719b4c4f8cb38728de126b04c78}\label{class_task_mode_1_1_task_list_creator_a2129b719b4c4f8cb38728de126b04c78}} 
+\index{TaskMode.TaskListCreator@{TaskMode.TaskListCreator}!AddViewMolecule@{AddViewMolecule}}
+\index{AddViewMolecule@{AddViewMolecule}!TaskMode.TaskListCreator@{TaskMode.TaskListCreator}}
+\doxysubsubsection{\texorpdfstring{AddViewMolecule()}{AddViewMolecule()}}
+{\footnotesize\ttfamily void Task\+Mode.\+Task\+List\+Creator.\+Add\+View\+Molecule (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_molecule_s_o}{Molecule\+SO}}}]{molecule }\end{DoxyParamCaption})}
+
+Adds a View -\/ \mbox{\hyperlink{namespace_molecule}{Molecule}} -\/ \mbox{\hyperlink{class_task_mode_1_1_task}{Task}} \mbox{\Hypertarget{class_task_mode_1_1_task_list_creator_a9bef0f4b5d8a84f8168d321d3a84c3b7}\label{class_task_mode_1_1_task_list_creator_a9bef0f4b5d8a84f8168d321d3a84c3b7}} 
+\index{TaskMode.TaskListCreator@{TaskMode.TaskListCreator}!Save@{Save}}
+\index{Save@{Save}!TaskMode.TaskListCreator@{TaskMode.TaskListCreator}}
+\doxysubsubsection{\texorpdfstring{Save()}{Save()}}
+{\footnotesize\ttfamily int Task\+Mode.\+Task\+List\+Creator.\+Save (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+\begin{DoxyReturn}{Returns}
+The Id of the created tasklist inside Task\+Lists\+Saver.\+Task\+Lists 
+\end{DoxyReturn}
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
